--- a/index.html
+++ b/index.html
@@ -1,7 +1,97 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <title>jegentile</title>
+
+
+
+    <!-- Bootstrap -->
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+<style>
+.btn-skinny {
+  padding: 3px;
+  font-size: 10px;
+  line-height: 1.0;
+  vertical-align:5px;
+}
+
+.description {
+  font-size: 12px;
+  font-weight: normal;
+}
+</style>
+
+  <body>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">jegentile</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="aboutme.html">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+
+
+    <div class="jumbotron" label="about">
+        <div class="container">
+            <h2>James' Projects.</h2>
+
+                <!--a class="btn btn-primary btn-lg btn-skinny" href="#aboutme" role="button">PDF &raquo;</a></p-->
+        </div>
+    </div>
+    <div class="container">
+
+
+        <div class="row">
+            <div class="col-lg-4">
+                <a href="ivml/index.html"><img class="img-circle" width="150" height="150" src="./ivml/images/quads.png" alt="Generic placeholder image"></a>
+                <h2>IVML</h2>
+                <p>The interactive Visualization Markup Language</p>
+                <p><a class="btn btn-default" href="ivml/index.html" role="button">Examples &raquo;</a></p>
+                <p><a class="btn btn-default" href="https://github.com/jegentile/IVML" role="button">Repository &raquo;</a></p>
+                <p><a class="btn btn-default" href="ivml/doc.pdf" role="button">Documentation &raquo;</a></p>
+
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <a href="http://github.com/jegentile/PEKCModel"><img class="img-circle" width="150" height="150" src="pekc.png" alt="Generic placeholder image"></a>
+                <h2>PEKC Model</h2>
+                <p>Agent-based model based on 'The Political Economy of the Kuznets Curve'.</p>
+                <p><a class="btn btn-default" href="https://github.com/jegentile/PEKCModel" role="button">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+
+        </div>
+    </div><!-- /.row -->
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    
+
+  </body>
+
+  <script type="text/javascript" src="holder.js"></script>
+
 </html>
