--- a/aboutme.html
+++ b/aboutme.html
@@ -43,13 +43,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">jegentile</a>
+            <a class="navbar-brand"  href="index.html">jegentile</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="aboutme.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+              <li><a href="https://www.linkedin.com/profile/view?id=289695697">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
