--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="jumbotron" label="about">
         <div class="container">
-            <h2>James' Projects.</h2>
+            <h2>James' Projects:</h2>
 
                 <!--a class="btn btn-primary btn-lg btn-skinny" href="#aboutme" role="button">PDF &raquo;</a></p-->
         </div>
