--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <a href="http://github.com/jegentile/PEKCModel"><img class="img-circle" width="150" height="150" src="pekc.png" alt="Generic placeholder image"></a>
                 <h2>PEKC Model</h2>
                 <p>Agent-based model based on 'The Political Economy of the Kuznets Curve'.</p>
-                <p><a class="btn btn-default" href="https://github.com/jegentile/PEKCModel" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="https://github.com/jegentile/PEKCModel" role="button">Repository &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
 
         </div>
