--- a/ivml/index.html
+++ b/ivml/index.html
@@ -50,6 +50,8 @@
             IVML, the Interactive Visualization Markup Language, is a JavaScript library that leverages popular JavaScript technologies Angular, D3 and JQuery to enable developers to quickly implement interactive data visualizations in a browser. It has predefined a collection of embeddable Angular directives that bind to underlying JavaScript objects.
 
             <p><a class="btn btn-default" href="https://github.com/jegentile/IVML" role="button">Repository &raquo;</a></p>
+            <p><a class="btn btn-default" href="doc.pdf" role="button">Documentation &raquo;</a></p>
+
         </div>
 
 		<div class="row">
