--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="aboutme.html">About</a></li>
-              <li><a href="https://www.linkedin.com/profile/view?id=289695697">Contact</a></li>
+              <li><a href="www.linkedin.com/pub/james-gentile/81/27/b81/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
