--- a/ivml/index.html
+++ b/ivml/index.html
@@ -45,7 +45,8 @@
 <div class="container">
 
 
-		<div class="page-header"><h1>IVML</h1>
+	<div class="page-header"><h1>IVML</h1>
+	<h3>Angular.js directives for data visualization with d3.js</h3>
 
             IVML, the Interactive Visualization Markup Language, is a JavaScript library that leverages popular JavaScript technologies Angular, D3 and JQuery to enable developers to quickly implement interactive data visualizations in a browser. It has predefined a collection of embeddable Angular directives that bind to underlying JavaScript objects.
 
