--- a/ivml/index.html
+++ b/ivml/index.html
@@ -46,7 +46,7 @@
 
 
 	<div class="page-header"><h1>IVML</h1>
-	<h3>Angular.js directives for data visualization with d3.js</h3>
+	<h5>Angular.js directives for data visualization with d3.js</h5>
 
             IVML, the Interactive Visualization Markup Language, is a JavaScript library that leverages popular JavaScript technologies Angular, D3 and JQuery to enable developers to quickly implement interactive data visualizations in a browser. It has predefined a collection of embeddable Angular directives that bind to underlying JavaScript objects.
 
@@ -54,8 +54,12 @@
             <p><a class="btn btn-default" href="doc.pdf" role="button">Documentation &raquo;</a></p>
 
         </div>
+        <div class="row">
+        	By: <a href="https://github.com/jegentile">James Gentile</a>, <a href="https://github.com/AndyMeyers">AndyMeyers</a>,  and <a href="https://github.com/patricknevindwyer">Patrick Dwyer</a>
+        </div>
 
 		<div class="row">
+		<h3>Examples</h3>
 			<div class="col-md-3"><a href="example_points.html"><img src="images/points.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Plotting Points</h3>
