--- a/ivml/index.html
+++ b/ivml/index.html
@@ -55,7 +55,7 @@
 
         </div>
         <div class="row">
-        	By: <a href="https://github.com/jegentile">James Gentile</a>, <a href="https://github.com/AndyMeyers">AndyMeyers</a>,  and <a href="https://github.com/patricknevindwyer">Patrick Dwyer</a>
+        	By: <a href="https://github.com/jegentile">@jegentile</a>, <a href="https://github.com/AndyMeyers">@AndyMeyers</a>,  and <a href="https://github.com/patricknevindwyer">@patricknevindwyer</a>
         </div>
 
 		<div class="row">
@@ -63,11 +63,13 @@
 			<div class="col-md-3"><a href="example_points.html"><img src="images/points.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Plotting Points</h3>
+				<p>Demonstrates scatter plots and dynamically-updating data stuructures.</p>
 			</div>
 
 			<div class="col-md-3"><a href="example_lines.html"><img src="images/lines.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Drawing Lines</h3>
+				<p>Single-line, multi-line and stacked-line charts.</p>
 			</div>
 		</div>
 		
@@ -75,11 +77,13 @@
 			<div class="col-md-3"><a href="example_simplezoom.html"><img src="images/simplezoom.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Simple Zooming</h3>
+				<p>Brushes and events.</p>
 			</div>
 
 			<div class="col-md-3"><a href="example_quads.html"><img src="images/quads.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Quad Charts</h3>
+				<p>Axes options, text labels and rectangles.</p>
 			</div>
 		</div>
 		
@@ -87,11 +91,14 @@
 			<div class="col-md-3"><a href="example_hurricane.html"><img src="images/hurricane.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Hurricane Chart</h3>
+				<p>Error bars and multiple visual elements on a plot.</p>
+
 			</div>
 
 			<div class="col-md-3"><a href="example_2dzoom.html"><img src="images/2dzoom.png"/></a></div>
 			<div class="col-md-3">
 				<h3>2-Dimensional Zooming</h3>
+				<p>Advanced zooming through brushes.</p>
 			</div>
 		</div>
 	    
@@ -104,6 +111,7 @@
 			<div class="col-md-3"><a href="example_life.html"><img src="images/life.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Game of Life</h3>
+				<p>Implementation with very concise JavaScript. </p>
 			</div>
 		</div>
 
