cleaned up page

--- a/ivml/index.html
+++ b/ivml/index.html
@@ -59,11 +59,11 @@
         </div>
 
 		<div class="row">
-		<h3>Examples</h3>
+		<h3>Examples:</h3>
 			<div class="col-md-3"><a href="example_points.html"><img src="images/points.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Plotting Points</h3>
-				<p>Demonstrates scatter plots and dynamically-updating data stuructures.</p>
+				<p>Scatter plots and dynamically-updating data stuructures.</p>
 			</div>
 
 			<div class="col-md-3"><a href="example_lines.html"><img src="images/lines.png"/></a></div>
@@ -106,6 +106,7 @@
 			<div class="col-md-3"><a href="example_bars.html"><img src="images/bars.png"/></a></div>
 			<div class="col-md-3">
 				<h3>Bar Charts</h3>
+				<p>Stacked and grouped bar charts.</p>
 			</div>
 
 			<div class="col-md-3"><a href="example_life.html"><img src="images/life.png"/></a></div>
