--- a/ivml/index.html
+++ b/ivml/index.html
@@ -33,7 +33,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="../index.html">Home</a></li>
                 <li><a href="../aboutme.html">About</a></li>
-                <li><a href="http://www.linkedin.com/pub/james-gentile/81/27/b81/">Contact</a></li>
+                <li><a href="http://www.linkedin.com/pub/james-gentile/81/27/b81/">Connect</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -48,7 +48,7 @@
 	<div class="page-header"><h1>IVML</h1>
 	<h5>Angular.js directives for data visualization with d3.js</h5>
 
-            IVML, the Interactive Visualization Markup Language, is a JavaScript library that leverages popular JavaScript technologies Angular, D3 and JQuery to enable developers to quickly implement interactive data visualizations in a browser. It has predefined a collection of embeddable Angular directives that bind to underlying JavaScript objects.
+            IVML is a JavaScript library that leverages popular JavaScript technologies Angular, D3 and JQuery. It uses d3js to provide embeddable AngularJS directives for data visualization, greatly reducing the effort required to make interactive dashboards.
 
             <p><a class="btn btn-default" href="https://github.com/jegentile/IVML" role="button">Repository &raquo;</a></p>
             <p><a class="btn btn-default" href="doc.pdf" role="button">Documentation &raquo;</a></p>
@@ -57,6 +57,7 @@
         <div class="row">
         	By: <a href="https://github.com/jegentile">@jegentile</a>, <a href="https://github.com/AndyMeyers">@AndyMeyers</a>,  and <a href="https://github.com/patricknevindwyer">@patricknevindwyer</a>
         </div>
+        <hr>
 
 		<div class="row">
 		<h3>Examples:</h3>
@@ -116,7 +117,10 @@
 			</div>
 		</div>
 
+
         </div>
+
+
 </div>
 <script type="text/javascript">
     angular.module("ivmlexample", ['ivml'])
